# DriverDrowsinessDetection

./: .dockerignore  .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  App.js  Dockerfile  README.md  analysis_options.yaml  app.js  app.json  authRoute.js  camera.js  data.py  docker-compose.yml  eas.json  firebase commands.txt  firebase.json  package-lock.json  package.json  pubspec.yaml  pyproject.toml  requirements.txt  sendFile.py  webcam-demo.py  webcamDemo.py
.dart_tool/: package_config.json  package_config_subset
.firebase/: hosting.YnVpbGQvd2Vi.cache  hosting.YnVpbGRcd2Vi.cache
DDD/: DDD.py  DDD.pyproj  DDD.sln
Notes/: Export user data format  Exporting feature.txt  useful commands.txt
TensorFlow JS layers type/: model.json
Tensorflow JS graph type/: model.json
android/: local.properties  settings.gradle
app/: .dockerignore  app.py
functions/: README.md  index.js  main.py  package-lock.json  package.json  requirements.txt
graphModel/: model.json
ios/: firebase_app_id_file.json
jobs/: Dockerfile  main.py
lib/: bluetooth_page.dart  data_response.dart  drowsiness_data.dart  drowsiness_graph.dart  firebase_options.dart  lineDemo.dart  login_page.dart  main.dart  mock_drowsiness_data.dart  navigation_row.dart  scan_home_page.dart  settings_drawer.dart  standard_bar_chart.dart  standard_line_chart.dart
linux/: CMakeLists.txt  my_application.cc
model/: tflite-converter.ipynb
notes/: important_reminder.txt  useful-commands.txt
saved-data/: firebase-export-metadata.json
scripts/: main.py  requirements.txt
(+268 files in other folders)
